Updated styles and layout for slot machine

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slot Machine</title>
+    <title>GIGACHATTER1.0</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>GIGACHATTER1.0</h1>
     <div id="slot-machine">
         <div class="reel"><div class="reel-inner"></div></div>
         <div class="reel"><div class="reel-inner"></div></div>
         <div class="reel"><div class="reel-inner"></div></div>
-        <button id="spin-button">Крутить</button>
+        <button id="spin-button">Стартуем</button>
     </div>
     <div id="result"></div>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
