Fix layout and missing images issues1

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIGACHATTER1.0</title>
+    <title>ПИДОР ЧАТА</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>GIGACHATTER1.0</h1>
+    <h1>ПИДОР ЧАТА</h1>
     <div id="slot-machine">
         <div class="reel"><div class="reel-inner"></div></div>
         <div class="reel"><div class="reel-inner"></div></div>
